@@ -1,27 +1,50 @@
 <INCLUDE>gcl/gcl.h</INCLUDE>
 
 <SECTION>
+<FILE>gclmain</FILE>
+gcl_init
+</SECTION>
+
+<SECTION>
 <FILE>gcldate</FILE>
 GDateHour
-CLDate
 GCLDate
 GCL_DATE_ERROR
 GCLDateError
-JieRi
 gcl_date_error_quark
 gcl_date_new
 gcl_date_set_solar_date
 gcl_date_set_lunar_date
-gcl_date_get_solar_date
-gcl_date_get_lunar_date
-gcl_date_get_shengxiao
-gcl_date_get_ganzhi
-gcl_date_get_bazi
 gcl_date_get_jieri
+gcl_date_strftime
 gcl_date_free
 </SECTION>
 
 <SECTION>
-<FILE>gclmain</FILE>
-gcl_init
+<FILE>gclcalendar</FILE>
+<TITLE>GclCalendar</TITLE>
+GclCalendar
+GclCalendarDisplayOptions
+gcl_calendar_new
+gcl_calendar_select_month
+gcl_calendar_select_day
+gcl_calendar_mark_day
+gcl_calendar_unmark_day
+gcl_calendar_clear_marks
+gcl_calendar_get_display_options
+gcl_calendar_set_display_options
+gcl_calendar_display_options
+gcl_calendar_get_date
+gcl_calendar_freeze
+gcl_calendar_thaw
+<SUBSECTION Standard>
+GCL_CALENDAR
+GCL_IS_CALENDAR
+GCL_TYPE_CALENDAR
+GCL_CALENDAR_CLASS
+GCL_IS_CALENDAR_CLASS
+GCL_CALENDAR_GET_CLASS
+<SUBSECTION Private>
+GclCalendarPrivate
+gcl_calendar_get_type
 </SECTION>
